@@ -1,4 +1,8 @@
-﻿zg 08.05.2016 13:40:15 +0200 - build 570
+﻿shmuel 08.06.2016 00:23:44 +0200 - build 571
+
+1. LuaFAR: fix unicode.utf8.gmatch and add a specific test for it.
+
+zg 08.05.2016 13:40:15 +0200 - build 570
 
 1. LuaFAR: поддержка WTYPE_COMBOBOX.
 
